--- a/briar-android/src/main/res/values-it/strings.xml
+++ b/briar-android/src/main/res/values-it/strings.xml
@@ -343,8 +343,8 @@
   <string name="panic_app_setting_none">Nessuno</string>
   <string name="dialog_title_connect_panic_app">Conferma App Panico</string>
   <string name="dialog_message_connect_panic_app">Sei sicuro di voler consentire %1$s di attivare le azioni distruttive del pulsante panico?</string>
-  <string name="lock_setting_title">Esci</string>
-  <string name="lock_setting_summary">Uscire da Briar se viene premuto un pulsante di panico</string>
+  <string name="panic_setting_signout_title">Esci</string>
+  <string name="panic_setting_signout_summary">Uscire da Briar se viene premuto un pulsante di panico</string>
   <string name="purge_setting_title">Elimina Account</string>
   <string name="purge_setting_summary">Cancella il tuo account Briar se un panic button è premuto. Attenzione: ciò cancellerà permanentemente le tue identità, contatti e messaggi</string>
   <string name="uninstall_setting_title">Disinstalla Briar</string>
