--- a/briar-android/src/main/res/values-nl/strings.xml
+++ b/briar-android/src/main/res/values-nl/strings.xml
@@ -343,8 +343,8 @@
   <string name="panic_app_setting_none">Geen</string>
   <string name="dialog_title_connect_panic_app">Bevestig paniekapp</string>
   <string name="dialog_message_connect_panic_app">Weet je zeker dat je wil toestaan dat %1$s destructieve paniekknopacties mag veroorzaken?</string>
-  <string name="lock_setting_title">Log uit</string>
-  <string name="lock_setting_summary">Log uit op Briar als de paniekknop wordt ingedrukt.</string>
+  <string name="panic_setting_signout_title">Log uit</string>
+  <string name="panic_setting_signout_summary">Log uit op Briar als de paniekknop wordt ingedrukt.</string>
   <string name="purge_setting_title">Verwijder account</string>
   <string name="purge_setting_summary">Verwijder je Briar-account als een paniekknop wordt ingedrukt. Let op: Dit zal permanent je identiteit, contacten en berichten verwijderen.</string>
   <string name="uninstall_setting_title">Deïnstalleer Briar</string>
