--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -359,6 +359,7 @@
 	<string name="security_settings_title">Security</string>
 	<string name="pref_lock_title">Screen Lock</string>
 	<string name="pref_lock_summary">Use the device\'s screen lock to protect Briar while signed in</string>
+	<string name="pref_lock_disabled_summary">Set up a screen lock for your device to protect Briar while signed in</string>
 	<string name="change_password">Change password</string>
 	<string name="current_password">Current password</string>
 	<string name="choose_new_password">New password</string>
@@ -373,8 +374,8 @@
 	<string name="panic_app_setting_none">None</string>
 	<string name="dialog_title_connect_panic_app">Confirm Panic App</string>
 	<string name="dialog_message_connect_panic_app">Are you sure that you want to allow %1$s to trigger destructive panic button actions?</string>
-	<string name="lock_setting_title">Sign Out</string>
-	<string name="lock_setting_summary">Sign out of Briar if a panic button is pressed</string>
+	<string name="panic_setting_signout_title">Sign Out</string>
+	<string name="panic_setting_signout_summary">Sign out of Briar if a panic button is pressed</string>
 	<string name="purge_setting_title">Delete Account</string>
 	<string name="purge_setting_summary">Delete your Briar account if a panic button is pressed. Caution: This will permanently delete your identities, contacts and messages</string>
 	<string name="uninstall_setting_title">Uninstall Briar</string>
@@ -453,7 +454,6 @@
 	<string name="lock_unlock_description">Enter your device PIN, pattern or password to continue</string>
 	<string name="lock_is_locked">Briar is locked</string>
 	<string name="lock_tap_to_unlock">Tap to unlock</string>
-	<string name="lock_disabled">Set up a screen lock for your device to protect Briar while signed in</string>
 	<!-- This is meant as an imperative, but should be shorter than: Lock the app! -->
 	<string name="lock_lock">Lock</string>
 
