--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -451,6 +451,7 @@
 
 	<!-- App Locking -->
 	<string name="lock_unlock">Unlock Briar</string>
+	<string name="lock_unlock_verbose">Enter your device PIN, pattern or password to unlock Briar</string>
 	<string name="lock_is_locked">Briar is locked</string>
 	<string name="lock_tap_to_unlock">Tap to unlock</string>
 
