--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -361,13 +361,15 @@
 	<string name="pref_lock_summary">Use the device\'s screen lock to protect Briar while signed in</string>
 	<string name="pref_lock_disabled_summary">Set up a screen lock for your device to protect Briar while signed in</string>
 	<string name="pref_lock_timeout_title">Screen Lock Inactivity Timeout</string>
+	<!-- The %s placeholder is replaces with the following time spans, e.g. after 5 Minutes -->
 	<string name="pref_lock_timeout_summary">When not using Briar, automatically lock it %s</string>
-	<string name="pref_lock_timeout_never">never</string>
 	<string name="pref_lock_timeout_1">after 1 Minute</string>
 	<string name="pref_lock_timeout_5">after 5 Minutes</string>
 	<string name="pref_lock_timeout_15">after 15 Minutes</string>
 	<string name="pref_lock_timeout_30">after 30 Minutes</string>
 	<string name="pref_lock_timeout_60">after 1 Hour</string>
+	<string name="pref_lock_timeout_never">never</string>
+	<string name="pref_lock_timeout_never_summary">Never lock Briar automatically</string>
 
 	<string name="change_password">Change password</string>
 	<string name="current_password">Current password</string>
