--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -133,22 +133,21 @@
 	<string name="add_contact_title">Add a Contact</string>
 	<string name="face_to_face">You must meet up with the person you want to add as a contact.\n\nThis will prevent anyone from impersonating you or reading your messages in future.</string>
 	<string name="continue_button">Continue</string>
-	<string name="connection_failed">Connection failed</string>
 	<string name="try_again_button">Try Again</string>
 	<string name="waiting_for_contact_to_scan">Waiting for contact to scan and connect\u2026</string>
 	<string name="exchanging_contact_details">Exchanging contact details\u2026</string>
 	<string name="contact_added_toast">Contact added: %s</string>
 	<string name="contact_already_exists">Contact %s already exists</string>
-	<string name="contact_exchange_failed">Contact exchange failed</string>
 	<string name="qr_code_invalid">The QR code is invalid</string>
 	<string name="qr_code_unsupported">The QR code you are trying to scan belongs to an old version of %s which is no longer supported.\n\nPlease ensure that both of you are running the latest version and then try again.</string>
 	<string name="camera_error">Camera error</string>
 	<string name="connecting_to_device">Connecting to device\u2026</string>
 	<string name="authenticating_with_device">Authenticating with device\u2026</string>
-	<string name="connection_aborted_local">Connection aborted! This could mean that someone is trying to interfere with your connection</string>
-	<string name="connection_aborted_remote">Connection aborted by your contact! This could mean that someone is trying to interfere with your connection</string>
+	<string name="connection_aborted_local">The connection was aborted. Please try again! It might help to check that you\'re both connected to the same Wi-Fi network!</string>
+	<string name="connection_aborted_remote">The connection was aborted by your contact\'s device. Please try again! It might help to check that you\'re both connected to the same Wi-Fi network!</string>
 	<string name="connection_error_title">Could not connect to your contact</string>
-	<string name="connection_error_explanation">Please check that you\'re both connected to the same Wi-Fi network.\n\nIf this problem persists, please <a href="feedback">send feedback</a> to help us improve the app.</string>
+	<string name="connection_error_explanation">Please check that you\'re both connected to the same Wi-Fi network.</string>
+	<string name="connection_error_feedback">If this problem persists, please <a href="feedback">send feedback</a> to help us improve the app.</string>
 
 	<!-- Introductions -->
 	<string name="introduction_onboarding_title">Introduce your contacts</string>
